# manini

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  NEWS  README.md  configure.ac  notes
man/: Makefile.am  generate.sh  manini.asciidoc
src/: Makefile.am  main.c
src/minIni/: Makefile.am
src/minIni/dev/: Makefile.am
tests/: Readme.md  run-tests.sh  tst_basic.sh  tst_sectionless.sh
